implementado autenticação, feito testes e adicionado na documentação.
