# src/routes/auth.js
@@ -1,0 +1,5 @@
+module.exports = (app) => {
+    app.get('/auth', async (req, res) => {
+        res.status(200).send({ 'token': 'JS_e_Tudo'})
+    });
+}
